small fix shape divider z-index

--- a/src/blocks/section/styles/style.scss
+++ b/src/blocks/section/styles/style.scss
@@ -101,7 +101,7 @@ section.guten-section {
         transform: translateX(-50%) rotateY(180deg);
       }
 
-      &.guten-shape-zindex>svg {
+      &.guten-shape-zindex {
         z-index: 2;
       }
     }
@@ -116,7 +116,7 @@ section.guten-section {
         transform: translateX(-50%) rotateY(180deg);
       }
 
-      &.guten-shape-zindex>svg {
+      &.guten-shape-zindex {
         z-index: 2;
       }
     }
